css/styles.css
*{
    font-family: 'Inter', sans-serif;
}

main{
    padding-left: .5rem;
}

.logo-container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-bottom:1rem;
}

.w-logo{
    width: 50%;
}

.menu-logo{
    width: 70%;
    display: flex;
    cursor: pointer;
}

.toggle-list{
    display: none;
    background-color: hsl(36, 100%, 99%);
    width: 250px;
    height: 100%;
    position:fixed;
    top: 0;
    right: 0;
    font-size: 15px;
    font-weight: 700;
    z-index: 1;
}

.toggle-list img{
    display: flex;
    margin-left: auto;
    padding: 1rem;
}

#close-menu{
    cursor: pointer;
}

.list-content{
    padding-left: 2rem;
    padding-top: 7rem;
}

.list-content a{
    display: block;
    text-decoration: none;
    color: hsl(236, 13%, 42%);
    font-weight: 200;
    line-height: 2;
}

.list-content a:hover {
    cursor: pointer;
    color: hsl(35, 77%, 62%);
}




.image-container{
    background-image: url("assets/images/image-web-3-mobile.jpg");
    height: 300px;
    background-repeat: no-repeat;
    background-size: cover;
}   

h1{
    font-size: 2.3rem;
    font-weight: 800;
}

.button-secion p {
    color: hsl(236, 13%, 42%);
    font-weight: 400;
}

.btn{
    padding: .8rem 1.5rem;
    background-color: hsl(5, 85%, 63%);
    border: none;
    color: hsl(36, 100%, 99%);
    cursor: pointer;
    letter-spacing: .2rem;
    text-transform:uppercase;
}
.btn:hover{
    background-color: black;
}
.mid-area{
    margin-top: 3rem;
    background-color: hsl(240, 100%, 5%);
    padding:.2rem 0 0 1rem;
}

.mid-area h2{
    color:hsl(35, 77%, 62%) ;
}

.mid-area h3{
    color: hsl(36, 100%, 99%);
}

.mid-area h3:hover{
    cursor:pointer;
    color: hsl(35, 77%, 62%);

}

.mid-area p{
    color: hsl(233, 8%, 79%);
    padding-bottom: 2rem;
    border-bottom: 1px hsl(236, 13%, 42%) solid;
}

.last-area{
    padding-bottom: 2rem;
}

.container{
    display: grid;
    grid-template-columns: .3fr 1fr;
    grid-template-rows: 1fr;
}

.image-1{
    padding-top: 1.5rem;
    width: 100px;
}

.paragraph h2{
    color: hsl(233, 8%, 79%);
}

.paragraph h3{
    font-size: 1rem;
    font-weight: 800;
    padding-bottom: 0;
    cursor: pointer;
}

.paragraph h3:hover{
    color: hsl(5, 85%, 63%);
}
.paragraph p{
    font-size: 1rem;
    color: hsl(236, 13%, 42%);
}

#overlay {
    display: none;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    height: 180vh;
    background: #000;
    opacity: .6;
    filter: alpha(opacity=60);
}

@media (min-width:1200px) {
    body{
        display: flex;
        justify-content: center;
    }
    .menu-logo , #close-menu{
        display: none;
    }

    .logo-container{
        display: block;
        width: 10%;
        margin-bottom: 3rem;
    }

    .w-logo{
        margin-top: 2rem;

    }
    .toggle-list{
        display: block;
        height: 0;
        width: 50%;
        position: absolute;
        padding: 0;
    }

    .list-content{
        display: flex;
        padding-top: 1rem;
        font-size: 1.2rem;
        margin-top: 2rem;

    }

    a{
        padding-left:3rem;
    }


    .grid-container{
        display: grid;
        gap: 1.5rem;
        grid-template-rows: 300px 240px 240px;
        grid-template-columns: 400px 400px 350px;
    }

    .image-container{
        background-image: url("../assets/images/image-web-3-desktop.jpg");
        height: 500px;
        background-size: contain;
        grid-column: span 2;
    }

    .heading-container{
        grid-row: 2/3;
        grid-column: 1/2;
    }

    .heading-container h1{
        font-size: 3.5rem;
        padding-right: 1rem;
    }

    .button-section{
        grid-row: 2/3;
        grid-column: 2/3;
    }

    .button-secion p{
        padding-top: 2rem;
        padding-right: 1.5rem;
        font-size: 1rem;
        text-align: left;
        line-height: 1.5;
    }
    
    .btn{
        margin-top: 1.5rem;
        padding: 1rem 2rem;
    }

    .mid-area{
        grid-row: 1/3;
        grid-column: 3/4;
        margin-top: 0;
        padding-right: 1.3rem;
        padding-left: 1.3rem;
    }


    .mid-area h2{
        font-size: 2.5rem;
    }

    .mid-area p{
        line-height: 1.5;
    }

    .mid-area p:last-child{
        border: none;
    }

    .mid-area h3{
        padding-top: 0.5rem;
    }

    .last-area{
        grid-row: 3/4;
        grid-column: 1/4;
        display:flex;
        padding:0;
        margin-top: 2rem;
    }
    .container{
        grid-template-columns: 120px 280px;
        grid-template-rows: 1fr;
        gap: 1.5rem;
    }

    .image-1{
        width: 120px;
    }

    .paragraph h2{
        font-size: 2rem;
    }

    .paragraph h3{
        font-size: 1.2rem;
    }
    .paragraph p{
        padding-right: 2.5rem;
        line-height: 1.5;
    }
}

